force-app/main/default/objects/Release__c/fields/Inbound_Change_Set_Install_URL__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Change_Set_Install_URL__c</fullName>
    <label>Inbound Change Set/Install URL</label>
    <type>Url</type>
</CustomField>