force-app/main/default/objects/Release__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <inlineHelpText>If any special instructions for this release, please list them here. This includes steps which need to be taken in a specific order, manual configurations, etc.</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>