force-app/main/default/objects/Release__c/fields/Outbound_Change_Set__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Change_Set__c</fullName>
    <label>Outbound Change Set</label>
    <type>Url</type>
</CustomField>