force-app/main/default/objects/Release__c/fields/Release_Time__c.field-meta.xml
<CustomField>
    <fullName>Release_Time__c</fullName>
    <description>What time will the release begin?</description>
    <inlineHelpText>What time will the release begin?</inlineHelpText>
    <label>Release Time</label>
    <type>Time</type>
</CustomField>