force-app/main/default/objects/Release__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>